algorithm and language setting support

--- a/settings/qgrain.ini
+++ b/settings/qgrain.ini
@@ -6,3 +6,15 @@ data_start_column=1
 
 [data_saving]
 draw_charts=True
+
+[algorithm]
+global_optimization_maxiter=100
+global_optimization_success_iter=1
+global_optimization_stepsize=1.0
+minimizer_tolerance_level=7
+minimizer_maxiter=500
+final_tolerance_level=100
+final_maxiter=1000
+
+[app]
+language=zh_CN
