--- a/MANIFEST.IN
+++ b/MANIFEST.IN
@@ -1,3 +1,6 @@
 recursive-include QGrain i18n/*
 recursive-include QGrain samples/*
 recursive-include QGrain settings/*
+recursive-include QGrain settings/qss/*
+recursive-include QGrain settings/icons/dark/*
+recursive-include QGrain settings/icons/light/*
