--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+psutil
 numpy
 scipy
-matplotlib >= 3.5.0
-PySide6 >= 6.2.0
 scikit-learn
 torch
 xlrd
 openpyxl
+PySide6 >= 6.2.0
+matplotlib >= 3.5.0
 SciencePlots
 qt-material
