fix scipy caused error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 psutil
 numpy
-scipy
+scipy<=1.8.1
 scikit-learn
 grpcio
 protobuf
 xlrd
 openpyxl
-PySide6 >= 6.2.0
-matplotlib >= 3.5.0
+PySide6>=6.2.0
+matplotlib>=3.5.0
 SciencePlots<=1.0.8
 qt-material
